# rucli

./: Cargo.toml  flake.nix
src/: main.rs
src/netconf/: error.rs  mod.rs  xml.rs
