[package]
name = "rucli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
memmem = "0.1.1"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = [ "derive" ] }
ssh2 = "0.9"
ssh2-config = "0.6"
thiserror = "2.0"

[lib]
name = "rucli"
path = "src/lib.rs"
